--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_auth: ^4.4.0
   firebase_storage: ^11.1.0
   image_picker: ^0.8.7+1
+  flutter_easyloading: ^3.0.5
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
