--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^0.8.7+1
   flutter_easyloading: ^3.0.5
   provider: ^6.0.5
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
