--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,12 @@ dependencies:
   flutter_easyloading: ^3.0.5
   provider: ^6.0.5
   google_nav_bar: ^5.0.6
+  firebase_ui_auth: ^1.2.2
+  uuid: ^3.0.7
+  country_state_city_picker: ^1.2.8
+  date_time_picker: ^2.1.0
+  photo_view: ^0.14.0
+  flutter_slidable: ^2.0.0
 
 dev_dependencies:
   flutter_test:
