--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   photo_view: ^0.14.0
   flutter_slidable: ^2.0.0
   csc_picker: ^0.2.7
+  shared_preferences: ^2.1.1
 
 dev_dependencies:
   flutter_test:
