--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   flutter_slidable: ^2.0.0
   csc_picker: ^0.2.7
   shared_preferences: ^2.1.1
+  cached_network_image: ^3.2.3
+  shimmer_animation: ^2.1.0+1
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
