--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   cached_network_image: ^3.2.3
   shimmer_animation: ^2.1.0+1
   shimmer: ^2.0.0
+  conditional_builder_null_safety: ^0.0.6
 
 dev_dependencies:
   flutter_test:
