--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
    <application
-        android:label="second_chance"
+        android:label="Second Chance"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
